# text-to-midi

./: .dockerignore  .gitignore  Dockerfile  README.md  download.ipynb  environment-cuda.yml  environment-deploy.yml  environment-export.yml  environment-macos.yml  environment.yaml  environment.yml  generate.sh  pyproject.toml  requirements-runpodgpt2.txt  requirements.txt  run.sh
rp_deploy/: get_model.py  handler_gpt2.py
scripts/: alloc.sh  fine-tune-uri-a100.sh  fine-tune-uri-h100.sh  fine-tune-uri-l40.sh  fine-tune-uri.sh  generate-jsonl.sh  generate-music.sh  test.sh
src/: config.py  download.py  generate.py  midi.py  midi_utils.py  mistral.py  model.py  tokenizer.py  train.py
src-finetune/config/: 7B.yaml
src/deploy/: handler.py  utils.py
src/midi/: parse.py  synthesize.py  tokenize.py
src_finetune/config/: 7B.yaml  generate.py
